[project]
name = "wpt_tools"
dynamic = ["version"]
description = "Python package for analyzing wireless power systems"
authors = [{ name = "t-sasatani", email = "sasatani.dev@gmail.com" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = "AGPL-3.0"
dependencies = [
    "numpy>=1.26.0",
    "matplotlib>=3.10.3,<4",
    "scipy~=1.15.3",
    "scikit-learn>=1.2.1,<2",
    "pillow>=11.2.1,<12",
    "scikit-rf>=1.7.0,<1.8",
    "pydantic>=2.11.4,<3",
    "toml>=0.10.2,<0.11",
    "colorlog>=6.8.2,<7",
    "pytest>=8.2.2,<9",
    "pytest-cov>=6.1.0,<7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.26.0,<7",
    "sphinx>=8.2.3,<8.3",
    "myst-parser>=4.0.1,<5",
    "sphinx-book-theme>=1.1.4",
]

[tool.uv]
default-groups = [
    "dev",
]

[tool.hatch.build.targets.sdist]
include = ["wpt_tools"]

[tool.hatch.build.targets.wheel]
include = ["wpt_tools"]

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "post-release", local_scheme = "no-local-version" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
