[project]
name = "wpt_tools"
dynamic = ["version"]
description = "Python package for analyzing wireless power systems"
authors = [{ name = "t-sasatani", email = "sasatani.dev@gmail.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = "AGPL-3.0"
dependencies = [
    "numpy>=2.0.0,<3",
    "matplotlib>=3.10.3,<4",
    "scipy~=1.15.3",
    "scikit-learn>=1.2.1,<2",
    "pillow>=11.2.1,<12",
    "scikit-rf>=1.7.0,<1.8",
    "pydantic>=2.11.4,<3",
    "toml>=0.10.2,<0.11",
    "colorlog>=6.8.2,<7",
    "pytest>=8.2.2,<9",
    "pytest-cov>=6.1.0,<7",
    "ipykernel>=6.29.5",
    "numpydantic>=1.6.11",
    "dotenv>=0.9.9",
    "coloredlogs>=15.0.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.26.0,<7",
    "sphinx>=8.2.3,<8.3",
    "myst-parser>=4.0.1,<5",
    "sphinx-book-theme>=1.1.4",
    "black[jupyter]>=25.1.0,<26",
    "isort>=6.0.1,<7",
    "ruff>=0.11.6,<0.12",
]

[tool.hatch.build.targets.sdist]
include = ["wpt_tools"]

[tool.hatch.build.targets.wheel]
include = ["wpt_tools"]

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "post-release", local_scheme = "no-local-version" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C",
    "D",]
ignore = [
    "E501",  # Ignore line length errors, handled by Black
    "D200",  # Ignore One-line docstring should be in one line
    "D205",  # Ignore blank line required between summary line and description
    "D212",  # Ignore multi-line docstring summary should start at the first line
    "D213",  # Ignore multi-line docstring summary should start at the second line
    "C901",  # Ignore function is too complex, to be removed in the future
    "D203",  # Ignore 1 blank line required before class docstring
    "D401",  # Ignore first line should be in imperative mood
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
